# portfolio

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  meson.build  package-lock.json  package.json
.cargo/: config.toml
backend/: .dockerignore  .env_docker  .env_template  .gitignore  Dockerfile  docker-compose-testdb.yaml  docker-compose.yaml  fly.toml  jest.config.ts  package-lock.json  package.json
backend/src/: index.ts
backend/src/db/: db.test.ts  db.ts
backend/src/db/migrate/: 1_create_databases.sql
backend/src/github/: consts.test.ts  consts.ts  models.ts  web.test.ts  web.ts
backend/src/utils/: functions.test.ts  functions.ts
docs/: index.md
layout/: h1.html
portgen/: Cargo.toml  dir_check.h  main.c
portgen/src/: main.rs
src/: App.tsx  Content.css  Content.tsx  Footer.tsx  TopBar.css  TopBar.tsx  constants.rs  index.tsx  main.rs  models.rs  services.rs
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  layout.tsx  page.tsx
src/app/components/: App.tsx  Content.tsx  MainEntry.tsx  TopBar.css  TopBar.tsx
src/app/components/content/: About.css  About.tsx  Credentials.css  (+10 more)
src/app/open-source/: open-source.component.css  open-source.component.html  open-source.component.ts
src/content/: About.tsx  Content.css  Credentials.tsx  Left.css  Left.tsx  Links.tsx  OpenSource.tsx  Projects.tsx  Right.css  Right.tsx
src/models/: PullRequests.ts  RateLimit.ts
src/redux/: hooks.ts  store.ts  windowSlice.ts
src/services/: github-service.service.ts
subprojects/: bo_arena.wrap
test/: docker-compose.yml
(+4 files in other folders)
