[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-rc.2"
actix-files = "0.6.0-beta.16"
reqwest = "0.11.9"
futures = "0.3"
dotenv = "0.15.0"
serde_json = "1.0"
tokio = { version = "=1.16.1", features = ["full"] }
tokio-postgres = "0.7.5"

[build-dependencies]
dirs = "4.0.0"
